# hispanistica_games

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  ADMIN_PERSISTENCE_FIX_README.md  BRANCH_PROTECTION_SUMMARY.md  CHANGELOG.md  CITATION.cff  CLEANUP_REPORT.md  CONTRIBUTING.md  DEPLOY_CHECKLIST_UTC_TIMER.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  PHASE1_IMPLEMENTATION.md  QUICKSTART.md  README.md  ROOT_CLEANUP_REPORT.md  docker-compose.dev-postgres.yml  docker-compose.yml  level.md  level2.md  manage.py  package-lock.json  package.json  passwords.env.template  playwright.config.js  pyproject.toml  requirements.txt  seed_quiz_data.sql  server_admin_config.md  startme.md  test-quiz-routing.ps1  test_api_anon.py  test_cookie.py  test_output.txt  test_quiz_unit.py
.github/: copilot-instructions.md
docs/: ADMIN_GUIDE_QUIZ_UNITS.md  ADMIN_HIGHSCORE_DEPLOYMENT.md  ADMIN_HIGHSCORE_FIX_SMOKE_TEST.md  ADMIN_HIGHSCORE_FIX_SUMMARY.md  ADMIN_HIGHSCORE_STATUS.md  ADMIN_HIGHSCORE_TRACEBACK_CAPTURE.md  ADMIN_PERSISTENCE_FIX.md  ANONYMOUS_SESSION_FIX.md  ARCHITECTURE.md  AUTH_DEBUG_INSTRUMENTATION.md  AUTH_FIX_401_FETCH.md  CHANGELOG_QUIZ_VISIBILITY.md  CONTENT_WORKFLOW.md  CORAPAN-ANALYSIS-INDEX.md  CORAPAN-ANALYSIS-SUMMARY.md  CORAPAN_COMPARISON_AUDIT.md  CSRF_ENFORCEMENT_DEBUG.md  CSRF_TOKEN_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOY_ROBUSTNESS_PATCH.md  DOCS_SCOPE.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  EMERGENCY_VARCHAR_FIX.md  FIX_SUMMARY.md  MD3_UI_FIXES_RANGLISTE_FRAGE_LEVELUP.md  MOBILE_LAYOUT_FIX.md  MOBILE_TOPAPPBAR_TITLE_FIX.md  MODULES.md  (+44 more)
(+750 files in other folders)
